--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -21033,11 +21033,15 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
     @media (min-width: 992px) {
       #header-primary-navigation-menu .mega-sub-menu {
         top: calc(100% + 20px); } }
-    @media (min-width: 1200px) {
-      #header-primary-navigation-menu .mega-sub-menu.events .sub-menu-section.secondary {
-        -webkit-box-flex: 0;
-            -ms-flex: 0 0 25%;
-                flex: 0 0 25%; } }
+    #header-primary-navigation-menu .mega-sub-menu.events .sub-menu-section.secondary {
+      -webkit-box-flex: 0;
+          -ms-flex: 0 0 33.33333%;
+              flex: 0 0 33.33333%; }
+      @media (min-width: 1200px) {
+        #header-primary-navigation-menu .mega-sub-menu.events .sub-menu-section.secondary {
+          -webkit-box-flex: 0;
+              -ms-flex: 0 0 25%;
+                  flex: 0 0 25%; } }
     #header-primary-navigation-menu .mega-sub-menu > .inner {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -21056,20 +21060,20 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
                 columns: 3; }
       #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.secondary {
         -webkit-box-flex: 0;
-            -ms-flex: 0 0 33.33333%;
-                flex: 0 0 33.33333%;
+            -ms-flex: 0 0 41.66667%;
+                flex: 0 0 41.66667%;
         background-color: #F4F8FD;
         border-top-right-radius: 0;
         border-bottom-right-radius: 0; }
+        #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.secondary .container {
+          padding-top: 2.5rem; }
         #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.secondary h3 {
-          margin-bottom: 1rem; }
-      #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.default .sub-menu-menus h4 {
-        font-size: 1.125rem;
-        text-transform: uppercase; }
+          margin-bottom: 1rem;
+          margin-top: -.5rem; }
       #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.default .sub-menu-menus .menu {
-        -webkit-columns: 2;
-           -moz-columns: 2;
-                columns: 2;
+        -webkit-columns: 1;
+           -moz-columns: 1;
+                columns: 1;
         -webkit-column-gap: 2rem;
            -moz-column-gap: 2rem;
                 column-gap: 2rem; }
@@ -21079,6 +21083,8 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
           -webkit-column-break-inside: avoid;
              -moz-column-break-inside: avoid;
                   break-inside: avoid; }
+      #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.sub-menus h4 {
+        color: #7F94AA; }
     #header-primary-navigation-menu .mega-sub-menu .container {
       padding-top: 2rem;
       padding-bottom: 2rem; }
@@ -21098,9 +21104,17 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
                 flex: 1 1 auto;
         padding: 0 1rem; }
       #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus h4 {
-        font-weight: 500; }
+        font-weight: 700;
+        letter-spacing: .05em;
+        margin-bottom: 1.5rem;
+        font-size: 1.5rem;
+        text-transform: uppercase; }
         #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus h4 a {
-          padding: 0; }
+          padding: 0;
+          color: inherit; }
+        #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus h4 strong {
+          display: block;
+          color: #233053; }
       #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .menu {
         margin: 0;
         display: block;
@@ -21113,10 +21127,11 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
           margin-bottom: 0.5rem; }
         #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .menu a {
           padding: 0;
-          color: rgba(52, 58, 64, 0.8);
-          display: block; }
+          color: #233053;
+          display: block;
+          font-weight: 700; }
           #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .menu a:hover {
-            color: #233053; }
+            color: #108DBC; }
       #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus + .sub-menu-cta-links {
         margin-top: 2rem; }
     #header-primary-navigation-menu .mega-sub-menu .sub-menu-content {
