--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -21042,6 +21042,10 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
           -webkit-box-flex: 0;
               -ms-flex: 0 0 25%;
                   flex: 0 0 25%; } }
+      @media (min-width: 1200px) {
+        #header-primary-navigation-menu .mega-sub-menu.events .sub-menu-section.secondary .container {
+          padding-left: 2.5rem;
+          padding-right: 2.5rem; } }
     #header-primary-navigation-menu .mega-sub-menu > .inner {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -21067,6 +21071,10 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
         border-bottom-right-radius: 0; }
         #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.secondary .container {
           padding-top: 2.5rem; }
+          @media (min-width: 1200px) {
+            #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.secondary .container {
+              padding-left: 4rem;
+              padding-right: 4rem; } }
         #header-primary-navigation-menu .mega-sub-menu .sub-menu-section.secondary h3 {
           margin-bottom: 1rem;
           margin-top: -.5rem; }
@@ -21132,6 +21140,27 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
           font-weight: 700; }
           #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .menu a:hover {
             color: #108DBC; }
+            #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .menu a:hover:after {
+              opacity: 1;
+              right: 0; }
+          #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus .menu a:after {
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            display: inline-block;
+            font-style: normal;
+            font-variant: normal;
+            font-weight: normal;
+            line-height: 1;
+            font-family: icomoon;
+            content: "";
+            position: relative;
+            margin-left: .5em;
+            margin-right: -.5em;
+            top: .08em;
+            right: .5em;
+            opacity: 0;
+            -webkit-transition: right ease-out .15s, opacity .15s;
+            transition: right ease-out .15s, opacity .15s; }
       #header-primary-navigation-menu .mega-sub-menu .sub-menu-menus + .sub-menu-cta-links {
         margin-top: 2rem; }
     #header-primary-navigation-menu .mega-sub-menu .sub-menu-content {
