--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
@@ -625,6 +625,12 @@ body.mobile-menu-active {
 				@include media-breakpoint-up(xl) {
 					flex: 0 0 percentage(3 / 12);
 				}
+				.container {
+					@include media-breakpoint-up(xl) {
+						padding-left: 2.5rem;
+						padding-right: 2.5rem;
+					}
+				}
 			}
 		}
 		> .inner {
@@ -653,6 +659,10 @@ body.mobile-menu-active {
 				border-bottom-right-radius: 0;
 				.container {
 					padding-top: 2.5rem;
+					@include media-breakpoint-up(xl) {
+						padding-left: 4rem;
+						padding-right: 4rem;
+					}
 				}
 				h3 {
 					margin-bottom: 1rem;
@@ -729,6 +739,20 @@ body.mobile-menu-active {
 					font-weight: 700;
 					&:hover {
 						color: $blue;
+						&:after {
+							opacity: 1;
+							right: 0;
+						}
+					}
+					&:after {
+						@include icon(map-get($icomoon-icons, arrow-right), icomoon);
+						position: relative;
+						margin-left: .5em;
+						margin-right: -.5em;
+						top: .08em;
+						right: .5em;
+						opacity: 0;
+						transition: right ease-out .15s, opacity .15s;
 					}
 				}
 			}
