--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -135,7 +135,8 @@ $gform-gutter-width: 10px;
 
 	}
 
-	&.no-label {
+	&.no-label,
+	&.hidden_label {
 		.gfield_label {
 			display: none;
 		}
@@ -217,19 +218,23 @@ $gform-gutter-width: 10px;
 	margin: 0;
 	li {
 		margin-top: 0;
-		margin-bottom: 5px;
-		padding-left: 20px;
+		margin-bottom: .5rem;
+		padding-left: 1.5rem;
 		label {
 			padding-left: 0;
 			margin-bottom: 0;
 			color: inherit;
+			font-size: 1rem;
+			font-weight: 400;
 		}
 	}
 	input[type="radio"],
 	input[type="checkbox"] {
 		float: left;
-		margin-left: -20px;
-		margin-top: .2em;
+		margin-left: -1.5rem;
+		margin-top: .05rem;
+		width: 1rem;
+		height: 1rem;
 	}
 }
 
