--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -19836,12 +19836,12 @@ nav.pagination {
   .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-date, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-date {
     margin-top: 1.5rem; }
   .wp-block-crown-blocks-post-index article.type-post.post-format-tweet a, .wp-block-crown-blocks-post-index article.type-post.post-format-tweet a:hover {
-    background-color: #D44457;
+    background-color: #D44457 !important;
     color: #fff; }
   .wp-block-crown-blocks-post-index article.type-post.post-format-tweet .entry-icon {
     background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="%23FFFFFF"%3e%3cpath d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/%3e%3c/svg%3e'); }
   .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update a, .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update a:hover {
-    background-color: #108DBC;
+    background-color: #108DBC !important;
     color: #fff; }
   .wp-block-crown-blocks-post-index article.type-post.post-format-facebook-update .entry-icon {
     background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" fill="%23FFFFFF"%3e%3cpath d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/%3e%3c/svg%3e'); }
@@ -19854,18 +19854,39 @@ nav.pagination {
     @media (min-width: 768px) {
       .wp-block-crown-blocks-post-index article.type-post a {
         background-color: #fff;
-        -webkit-transition: background-color .2s, color .2s;
-        transition: background-color .2s, color .2s; }
+        -webkit-transition: background-color .4s, color .4s, -webkit-box-shadow .4s;
+        transition: background-color .4s, color .4s, -webkit-box-shadow .4s;
+        transition: background-color .4s, color .4s, box-shadow .4s;
+        transition: background-color .4s, color .4s, box-shadow .4s, -webkit-box-shadow .4s; }
         .wp-block-crown-blocks-post-index article.type-post a:hover {
           background-color: #233053;
-          color: #fff; }
+          color: #fff;
+          -webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+                  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); }
+          .wp-block-crown-blocks-post-index article.type-post a:hover.hover-color-dark-blue {
+            background-color: #233053; }
+          .wp-block-crown-blocks-post-index article.type-post a:hover.hover-color-blue {
+            background-color: #108DBC; }
+          .wp-block-crown-blocks-post-index article.type-post a:hover.hover-color-red {
+            background-color: #D44457; }
+          .wp-block-crown-blocks-post-index article.type-post a:hover.hover-color-gray {
+            background-color: #7F94AA; }
+          .wp-block-crown-blocks-post-index article.type-post a:hover.hover-color-dark-gray {
+            background-color: #343a40; }
           .wp-block-crown-blocks-post-index article.type-post a:hover .entry-categories span {
             border-color: #fff; }
-          .wp-block-crown-blocks-post-index article.type-post a:hover .entry-teaser:after {
+          .wp-block-crown-blocks-post-index article.type-post a:hover .entry-link > span:nth-child(1):before {
+            max-width: 100%;
+            background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(#fff));
+            background: linear-gradient(to right, rgba(255, 255, 255, 0), #fff); }
+          .wp-block-crown-blocks-post-index article.type-post a:hover .entry-link > span:nth-child(2) {
             opacity: 1;
-            margin-right: 0;
-            -webkit-transition-delay: .2s;
-                    transition-delay: .2s; } }
+            -webkit-transform: none;
+                -ms-transform: none;
+                    transform: none; }
+          .wp-block-crown-blocks-post-index article.type-post a:hover .entry-link > span:nth-child(2):before {
+            opacity: 1;
+            left: 0; } }
     .wp-block-crown-blocks-post-index article.type-post a > .inner {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -19932,6 +19953,7 @@ nav.pagination {
       font-size: 2rem; }
       @media (min-width: 768px) {
         .wp-block-crown-blocks-post-index article.type-post .entry-teaser:after {
+          display: none;
           right: 2rem;
           bottom: 2rem;
           left: auto;
@@ -19939,9 +19961,6 @@ nav.pagination {
           opacity: 0;
           -webkit-transition: opacity .2s, margin-right .2s ease-out;
           transition: opacity .2s, margin-right .2s ease-out; } }
-  @media (min-width: 768px) {
-    .wp-block-crown-blocks-post-index article.type-post .entry-header {
-      margin-bottom: 1.5rem; } }
   .wp-block-crown-blocks-post-index article.type-post .entry-profile-handle {
     margin-bottom: 0;
     font-size: 0.875rem;
@@ -19976,6 +19995,88 @@ nav.pagination {
     @media (min-width: 1200px) {
       .wp-block-crown-blocks-post-index article.type-post .entry-date {
         margin-top: 2rem; } }
+  .wp-block-crown-blocks-post-index article.type-post .entry-link {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: none; }
+    @media (min-width: 768px) {
+      .wp-block-crown-blocks-post-index article.type-post .entry-link {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; } }
+    .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(1) {
+      display: block;
+      margin-right: 2rem;
+      -webkit-box-flex: 1;
+          -ms-flex: 1 1 auto;
+              flex: 1 1 auto; }
+      .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(1):before {
+        content: '';
+        display: block;
+        height: 0.25rem;
+        -webkit-transition: max-width .4s, background .4s;
+        transition: max-width .4s, background .4s;
+        background: -webkit-gradient(linear, left top, right top, from(rgba(35, 48, 83, 0)), to(#233053));
+        background: linear-gradient(to right, rgba(35, 48, 83, 0), #233053); }
+        @media (min-width: 768px) {
+          .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(1):before {
+            max-width: 6rem; } }
+    .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(2) {
+      display: block;
+      width: 4rem;
+      height: 4rem;
+      border-radius: 10rem;
+      background-color: #fff;
+      overflow: hidden;
+      position: relative;
+      -webkit-transition: opacity .2s, -webkit-transform .2s ease-out;
+      transition: opacity .2s, -webkit-transform .2s ease-out;
+      transition: opacity .2s, transform .2s ease-out;
+      transition: opacity .2s, transform .2s ease-out, -webkit-transform .2s ease-out; }
+      @media (min-width: 768px) {
+        .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(2) {
+          opacity: 0;
+          -webkit-transform: scale(0.8);
+              -ms-transform: scale(0.8);
+                  transform: scale(0.8); } }
+      .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(2):before {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: normal;
+        line-height: 1;
+        font-family: icomoon;
+        content: "";
+        color: #233053;
+        position: absolute;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-transition: left ease-out .2s, opacity .2s;
+        transition: left ease-out .2s, opacity .2s;
+        -webkit-transition-delay: .2s;
+                transition-delay: .2s; }
+        @media (min-width: 768px) {
+          .wp-block-crown-blocks-post-index article.type-post .entry-link > span:nth-child(2):before {
+            left: -.5rem;
+            opacity: 0; } }
 
 /*	Post Header
 ---------------------------------------------------------*/
