--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1979,11 +1979,11 @@
 			}
 		}
 		&.post-format-tweet {
-			a, a:hover { background-color: $red; color: #fff; }
+			a, a:hover { background-color: $red !important; color: #fff; }
 			.entry-icon { background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="#{$white}"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>')); }
 		}
 		&.post-format-facebook-update {
-			a, a:hover { background-color: $blue; color: #fff; }
+			a, a:hover { background-color: $blue !important; color: #fff; }
 			.entry-icon { background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" fill="#{$white}"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/></svg>')); }
 		}
 		a {
@@ -1992,12 +1992,24 @@
 			color: inherit;
 			@include media-breakpoint-up(md) {
 				background-color: #fff;
-				transition: background-color .2s, color .2s;
+				transition: background-color .4s, color .4s, box-shadow .4s;
 				&:hover {
 					background-color: $primary;
 					color: #fff;
+					box-shadow: 0 4px 16px rgba(#000, .2);
+					&.hover-color-dark-blue { background-color: $dark-blue; }
+					&.hover-color-blue { background-color: $blue; }
+					&.hover-color-red { background-color: $red; }
+					&.hover-color-gray { background-color: $gray; }
+					&.hover-color-dark-gray { background-color: $dark-gray; }
 					.entry-categories span { border-color: #fff; }
-					.entry-teaser:after { opacity: 1; margin-right: 0; transition-delay: .2s; }
+					// .entry-teaser:after { opacity: 1; margin-right: 0; transition-delay: .2s; }
+					.entry-link > span:nth-child(1):before {
+						max-width: 100%;
+						background: linear-gradient(to right, rgba(#fff, 0), #fff);
+					}
+					.entry-link > span:nth-child(2) { opacity: 1; transform: none; }
+					.entry-link > span:nth-child(2):before { opacity: 1; left: 0; }
 				}
 			}
 			> .inner {
@@ -2052,6 +2064,7 @@
 				line-height: 1;
 				font-size: 2rem;
 				@include media-breakpoint-up(md) {
+					display: none;
 					right: 2rem;
 					bottom: 2rem;
 					left: auto;
@@ -2059,11 +2072,6 @@
 					opacity: 0;
 					transition: opacity .2s, margin-right .2s ease-out;
 				}
-			}
-		}
-		.entry-header {
-			@include media-breakpoint-up(md) {
-				margin-bottom: 1.5rem;
 			}
 		}
 		.entry-profile-handle {
@@ -2107,6 +2115,62 @@
 			line-height: $line-height-sm;
 			@include media-breakpoint-up(xl) {
 				margin-top: 2rem;
+			}
+		}
+		.entry-link {
+			justify-content: flex-end;
+			align-items: center;
+			display: none;
+			@include media-breakpoint-up(md) {
+				display: flex;
+			}
+			> span:nth-child(1) {
+				display: block;
+				margin-right: 2rem;
+				flex: 1 1 auto;
+				&:before {
+					content: '';
+					display: block;
+					height: 0.25rem;
+					transition: max-width .4s, background .4s;
+					background: linear-gradient(to right, rgba($body-color, 0), $body-color);
+					@include media-breakpoint-up(md) {
+						max-width: 6rem;
+					}
+				}
+			}
+			> span:nth-child(2) {
+				display: block;
+				width: 4rem;
+				height: 4rem;
+				border-radius: 10rem;
+				background-color: #fff;
+				overflow: hidden;
+				position: relative;
+				transition: opacity .2s, transform .2s ease-out;
+				@include media-breakpoint-up(md) {
+					opacity: 0;
+					transform: scale(.8);
+				}
+				&:before {
+					@include icon(map-get($icomoon-icons, arrow-right), icomoon);
+					color: $body-color;
+					position: absolute;
+					display: flex;
+					width: 100%;
+					height: 100%;
+					left: 0;
+					top: 0;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					transition: left ease-out .2s, opacity .2s;
+					transition-delay: .2s;
+					@include media-breakpoint-up(md) {
+						left: -.5rem;
+						opacity: 0;
+					}
+				}
 			}
 		}
 	}
