--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_mobile-menu.scss
@@ -333,6 +333,7 @@ body.mobile-menu-active {
 			}
 		}
 		.sub-menu-cta-links {
+			margin-top: 1.5rem;
 			li + li {
 				margin-top: 0.25rem;
 			}
