--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1077,6 +1077,12 @@
 				font-family: $font-family-sans-serif;
 				color: rgba($dark-gray, .6);
 				font-weight: 700;
+				transition: background-color .2s, color .2s, boder-color .2s;
+				&:hover {
+					background-color: $primary;
+					border-color: $primary;
+					color: #fff;
+				}
 			}
 		}
 		.entry-title {
@@ -2225,6 +2231,12 @@
 	.entry-categories {
 		.category {
 			border-color: $primary;
+			transition: background-color .2s, color .2s, boder-color .2s;
+			&:hover {
+				background-color: $primary;
+				border-color: $primary;
+				color: #fff;
+			}
 		}
 	}
 	.entry-title {
