--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_modals.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_modals.scss
@@ -8,14 +8,19 @@
 		font-weight: 300;
 		font-family: $font-family-sans-serif-alt;
 		color: #fff;
+		width: 4rem;
+		height: 4rem;
+		padding: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 3rem;
 		&:not(:disabled):not(.disabled):hover,
 		&:not(:disabled):not(.disabled):focus {
 			opacity: 1;
 		}
 		@include media-breakpoint-up(md) {
-			font-size: 3rem;
-			padding-top: .5rem;
-			padding-bottom: .5rem;
+			font-size: 4rem;
 		}
 	}
 }
@@ -46,6 +51,10 @@
 	border-bottom: none;
 	background-color: $blue;
 	color: #fff;
+	min-height: 4rem;
+	@include media-breakpoint-up(md) {
+		min-height: 6rem;
+	}
 }
 .modal-footer {
 	// border-top: none;
@@ -73,11 +82,14 @@
 	}
 	.modal-title {
 		text-transform: uppercase;
-		letter-spacing: .1em;
+		letter-spacing: .15em;
+		font-size: 1.5rem;
+		margin-top: 0.25rem;
 	}
 	.modal-body {
 		@include media-breakpoint-up(md) {
 			display: flex;
+			padding-bottom: 4rem;
 		}
 	}
 	.subscribe-contents {
@@ -148,7 +160,7 @@
 			text-indent: -100000px;
 			position: relative;
 			&:after {
-				@include icon(map-get($icomoon-icons, arrow-right), icomoon);
+				@include icon(map-get($icomoon-icons, arrow-right-long), icomoon);
 				position: absolute;
 				text-indent: 0;
 				left: 0;
@@ -158,6 +170,7 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
+				font-size: 1.25rem;
 			}
 		}
 		.gform_ajax_spinner {
