Adding basic front end support for FAQs

--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -15414,7 +15414,8 @@ form.feed-filters {
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
-        vertical-align: top; }
+        vertical-align: top;
+        margin-top: .05em; }
     form.feed-filters .filters-header button.filters-clear {
       margin-left: 2rem;
       border: none;
@@ -20748,6 +20749,153 @@ nav.pagination {
         border-radius: 100rem; }
     .wp-block-crown-blocks-client-story-index blockquote cite span.job-title {
       opacity: .6; }
+
+/*	FAQ Index
+---------------------------------------------------------*/
+.wp-block-crown-blocks-faq-index article.type-faq:first-child {
+  margin-top: -1rem; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-faq-index article.type-faq:first-child {
+      margin-top: -1.5rem; } }
+
+.wp-block-crown-blocks-faq-index article.type-faq a {
+  display: block;
+  color: inherit;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  border-bottom: 1px solid #D0E4F8; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-faq-index article.type-faq a {
+      padding-bottom: 1.5rem;
+      padding-top: 1.5rem; } }
+  .wp-block-crown-blocks-faq-index article.type-faq a:hover .entry-title {
+    color: #108DBC; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-faq-index article.type-faq a > .inner {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
+
+.wp-block-crown-blocks-faq-index article.type-faq .entry-title {
+  font-weight: 600;
+  -webkit-transition: color .15s;
+  transition: color .15s;
+  margin-bottom: .5rem;
+  font-size: 1.5rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-faq-index article.type-faq .entry-title {
+      margin-bottom: 0; } }
+
+.wp-block-crown-blocks-faq-index article.type-faq .entry-date {
+  margin-bottom: 0;
+  line-height: 1.2; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-faq-index article.type-faq .entry-date {
+      margin-left: 2rem;
+      white-space: nowrap;
+      padding-top: 0.125rem;
+      text-align: right; } }
+
+@media (min-width: 992px) {
+  .wp-block-crown-blocks-faq-index-single {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 -1rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; } }
+
+@media (min-width: 992px) {
+  .wp-block-crown-blocks-faq-index-single .entry-contents,
+  .wp-block-crown-blocks-faq-index-single .entry-sidebar {
+    padding: 0 1rem; } }
+
+@media (min-width: 992px) {
+  .wp-block-crown-blocks-faq-index-single .entry-contents {
+    width: 66.66667%; } }
+
+.wp-block-crown-blocks-faq-index-single .entry-contents .entry-header {
+  margin-bottom: 2rem; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-faq-index-single .entry-contents .entry-header {
+      margin-bottom: 3rem; } }
+
+.wp-block-crown-blocks-faq-index-single .entry-contents .entry-title {
+  font-weight: 400;
+  font-size: 3rem; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-faq-index-single .entry-contents .entry-title {
+      font-size: 4rem; } }
+
+.wp-block-crown-blocks-faq-index-single .entry-contents .entry-date {
+  font-size: 1.75rem; }
+
+.wp-block-crown-blocks-faq-index-single .entry-sidebar {
+  margin-top: 2rem; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-faq-index-single .entry-sidebar {
+      -webkit-box-ordinal-group: 0;
+          -ms-flex-order: -1;
+              order: -1;
+      padding-right: 3rem;
+      width: 33.33333%;
+      margin-top: 0; } }
+
+.wp-block-crown-blocks-faq-index-single .return-to-index {
+  display: inline-block;
+  font-size: 1.625rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  line-height: 1.2;
+  color: #233053;
+  margin-bottom: 3rem;
+  margin-top: 1.375rem; }
+  .wp-block-crown-blocks-faq-index-single .return-to-index:hover {
+    color: #108DBC; }
+  .wp-block-crown-blocks-faq-index-single .return-to-index:before {
+    content: '';
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    margin-right: .5em;
+    background-image: url(s);
+    background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23108DBC" class="bi bi-grid-3x3-gap-fill" viewBox="0 0 16 16"%3e%3cpath d="M1 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2zM1 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zM1 12a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2z"/%3e%3c/svg%3e');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    vertical-align: top;
+    margin-top: 0.075em; }
+
+.wp-block-crown-blocks-faq-index-single .related-entries h4 {
+  margin-bottom: 2rem; }
+
+.wp-block-crown-blocks-faq-index-single .related-entries .menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 1.5rem; }
+
+.wp-block-crown-blocks-faq-index-single .related-entries .menu-item {
+  margin-bottom: 2rem; }
+  .wp-block-crown-blocks-faq-index-single .related-entries .menu-item.current-menu-item a {
+    padding: 1.5rem 2rem;
+    border-radius: 0.625rem;
+    background-color: #cfe8f2; }
+    @media (min-width: 992px) {
+      .wp-block-crown-blocks-faq-index-single .related-entries .menu-item.current-menu-item a {
+        margin-left: -2rem; } }
+    .wp-block-crown-blocks-faq-index-single .related-entries .menu-item.current-menu-item a:hover {
+      color: inherit; }
+  .wp-block-crown-blocks-faq-index-single .related-entries .menu-item a {
+    display: block;
+    color: inherit; }
+    .wp-block-crown-blocks-faq-index-single .related-entries .menu-item a:hover {
+      color: #108DBC; }
 
 #header {
   background-color: transparent;
