--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
@@ -132,6 +132,7 @@ form.feed-filters {
 				background-position: center;
 				background-repeat: no-repeat;
 				vertical-align: top;
+				margin-top: .05em;
 			}
 		}
 		button.filters-clear {
